# Wiper

./: CMakeLists.txt  FileProcessor.cpp  FileProcessor.h  FileQueue.cpp  FileQueue.h  FileWiper.cpp  FileWiper.h  Scanner.cpp  Scanner.h  Utils.h  main.cpp
